# my_krml_24701184

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  documenation.docx  pyproject.toml  ~$cumenation.docx
docs/: Makefile  conf.py  example.ipynb  make.bat
src/my_krml_24701184/: __init__.py
src/my_krml_24701184/data/: sets.py
src/my_krml_24701184/models/: baseline.py
tests/: test_my_krml_24701184.py
tests/data/: test_sets.py
tests/models/: test_baseline.py
