[tool.poetry]
name = "my_krml_24701184"
version = "2024.0.1.5"
description = "Package for everything ML"
authors = ["Farhan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
altair = ">=5.4.1,<6.0.0"
plotly = "^5.24.0"
summarytools = "^0.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
